{
    "name": "MouseBindings",
    "maps": [
        {
            "name": "Mouse",
            "id": "5e6f52ab-9049-4120-8e92-51ba0e5de578",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "0a6fa136-95f2-4da7-ad8f-53f938bdf874",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "0bddb660-fdc3-4886-adfc-7c790630b83c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "539f41e1-59c0-47fa-957e-66c35037cae6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0759045d-ae21-4022-b34f-ce32bc47b7b6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3388903a-d81f-4c12-a7ad-18ed98cab103",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ca1719b-df93-412f-90c2-bcb45f4fc319",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}